Update Kaos - od Newtona do Mandelbrota.ipynb

--- a/Kaos - od Newtona do Mandelbrota.ipynb
+++ b/Kaos - od Newtona do Mandelbrota.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "Za uvod nekaj zanimivosti iz Newtonovega življenja.\n",
     "\n",
-    "![Leonardo](/images/Leonardo_Annunciazione.jpg)\n",
+    "![Leonardo](./images/Leonardo_Annunciazione.jpg)\n",
     "\n",
     "text\n",
     "\n",
