--- a/Kaos - od Newtona do Mandelbrota.ipynb
+++ b/Kaos - od Newtona do Mandelbrota.ipynb
@@ -550,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Definicija*    **Normal family**\n",
+    "*Definicija*    **Normalna družina**\n",
     "\n",
     "A normal family is a pre-compact family of continuous functions. Informally, this means that the functions in the family are not widely spread out, but rather stick together in a somewhat \"clustered\" manner. It is of general interest to understand compact sets in function spaces, since these are usually truly infinite-dimensional in nature.\n",
     "\n",
