--- a/Kaos - od Newtona do Mandelbrota.ipynb
+++ b/Kaos - od Newtona do Mandelbrota.ipynb
@@ -65,7 +65,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "- Newton je iskal jasne zakone narave, Newtonova metoda pa daje zametke kaosa \n",
     "\n",
@@ -314,7 +317,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Kantorjeva množica\n",
     "\n"
@@ -322,7 +328,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "Kantorjeva množica $C$ je definirana kot\n",
@@ -364,7 +373,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Definicija: Iterativni funkcijski sistem (IFS) je definiran kot kot končni niz $(T_i)_{i=1}^n$, tako da velja\n",
     "$$ T(A) = T_1(A) \\cup T_2(A) \\cup \\dots \\cup T_n(A) $$\n",
@@ -387,7 +399,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -438,7 +452,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Benoît Mandelbrot\n",
     "\n",
@@ -456,7 +473,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -497,7 +516,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Zanimiva anekdota je povezana s prvim člankom, kjer je bila prikazana slika Mandelbrotove množice. Takrat še ni bilo jasno, da je to povezana množica in prve slike so bile dajale vtis, da so obstajajo ločene manjše komponente. Citiram:\n",
     "> The editors of the journal thought that his islands were specks of dirt, and carefully removed them from the pictures."
@@ -505,7 +527,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Mandelbrot animacija s klasično glasbo: \n",
     "\n",
@@ -515,7 +540,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Grand Prix 1918\n",
     "\n",
@@ -535,7 +563,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "[Riemanova ploskev](https://sl.wikipedia.org/wiki/Riemannova_ploskev) je enorazsežna kompleksna mnogoterost. Riemannove ploskve si lahko predstavljamo kot »deformirano obliko« kompleksne ravnine. Lokalno blizu vsake točke izgledajo kot delčki kompleksne ravnine, toda globalna topologija je lahko popolnoma drugačna. Lahko izgleda kot sfera ali torus ali kot dvojica zlepljenih plošč.\n",
     "Imenuje se po nemškem matematiku Bernhardu Riemannu (1826 – 1866).\n",
@@ -548,19 +579,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "*Definicija*    **Normalna družina**\n",
     "\n",
-    "A normal family is a pre-compact family of continuous functions. Informally, this means that the functions in the family are not widely spread out, but rather stick together in a somewhat \"clustered\" manner. It is of general interest to understand compact sets in function spaces, since these are usually truly infinite-dimensional in nature.\n",
+    "Normalna družina je prekompaktna družina zveznih funkcij. Neformalno to pomeni, da funkcije v družini niso preveč narazen, ampak se nekako držijo skupaj. \n",
     "\n",
-    "More formally, a family (equivalently, a set) F of continuous functions f defined on some complete metric space X with values in another complete metric space Y is called normal if every sequence of functions in F contains a subsequence which converges uniformly on compact subsets of X to a continuous function from X to Y. \n",
+    "Bolj formalno, družina $F$ zveznih funkcij $f$, definirana na kompletnem metričnem prostoru $X$ z vrednostmi v drugem kompletnem metričnem prostoru $Y$, se imenuje *normalna*, če ima vsako zaporedje iz $F$ podzaporedje, ki uniformno konvergira na komkpaktnih podmnožicah v $X$ k zvezni funkciji iz $X$ v $Y$.\n",
     "\n",
-    "That is, for every sequence of functions in F, there is a subsequence $f_n(x)$ and a continuous function $f(x)$ from X to Y such that the following holds for every compact subset K contained in X:\n",
+    "To pomeni, da za vsako zaporedje funkcij v $F$ obstaja podzaporedje $f_n(x)$ in zvezna funkcija $f(x)$ iz $X$ v $Y$, tako da za vsako kompaktno podmnožico $K$ v $X$ velja:\n",
     "\n",
-    "$$ \\lim_{n\\to\\infty} f(x) \\sup_{x\\in K} d_{Y}(f_n(x),f(x))=0 $$\n",
+    "$$ \\lim_{n\\to\\infty}\\sup_{x\\in K} d_{Y}(f_n(x),f(x))=0 $$\n",
     "\n",
-    "where $d_Y$ is the distance metric associated with the complete metric space Y.\n",
+    "kjer je $d_Y$ metrika v prostoru $Y$.\n",
     "\n",
     "  \n",
     "    \n",
