Mandelbrot set definition

--- a/Kaos - od Newtona do Mandelbrota.ipynb
+++ b/Kaos - od Newtona do Mandelbrota.ipynb
@@ -463,9 +463,8 @@
     "Po francoskem Grand Prix-u je prišlo do polstoletnega stagniranja, vse dokler niso računalniki postali tako zmogljivi, da so se lahko prikazovale slike Fatoujevih and juliajevih množic. Najbolj zaslužen za to je Benoit Mandelbrot. Zanimivo, da mu je idejo dal njegov stric, Szolem Mandelbrojt, profesor matematike v Parizu. Torej še vedno 'francoska povezava', pe toliko bolj, ker je bil njegov (stričev) doktorski mentor Jacques Hadamard.\n",
     "Definicija Mandelbrotove množice je pravzprav kratka in enostavna:  \n",
     "\n",
-    "To je množica vrednosti $c$ v kompleksni ravnini, za katere je orbita $0$ pod iteracijo kvadratne funkcije \n",
-    "$$ z_{n+1} = z_n^2 + c$$\n",
-    "omejena.\n",
+    "To je množica vrednosti $c$ v kompleksni ravnini, za katere je orbita $0$ pod iteracijo kvadratne funkcije $ z_{n+1} = z_n^2 + c$\n",
+    "omejena oz. bolj formalno, za $f_c(z) = z^2 + c$ je Mandelbrotova množica definirana kot $ M = \\{c \\in C: f_c^n(0) \\not\\to\\infty\\}  $\n",
     "\n"
    ]
   },
