--- a/Od Newtona do Mandelbrota.ipynb
+++ b/Od Newtona do Mandelbrota.ipynb
@@ -378,11 +378,14 @@
     "editable": true
    },
    "source": [
-    "Definicija: Iterativni funkcijski sistem (IFS) je definiran kot kot končni niz $(T_i)_{i=1}^n$, tako da velja\n",
-    "$$ T(A) = T_1(A) \\cup T_2(A) \\cup \\dots \\cup T_n(A) $$\n",
+    "**Definicija:** Naj bo $\\mathcal H(S)$ prostor, ki predstavlja kolekcijo kompaktnih podmnožic v $S \\subset R^n$ in $S$ zaprta množica.  \n",
+    "\n",
+    "**Definicija:** Iterativni funkcijski sistem (IFS) je definiran kot kot končni niz $(T_i)_{i=1}^n$, tako da velja $ T(A) = T_1(A) \\cup T_2(A) \\cup \\dots \\cup T_n(A) $.\n",
+    "\n",
+    "Če velja, da je vsaka transformacija $T_i$ kontrakcija, je kontrakcija tudi transformacija $T$.  \n",
     "\n",
     "*Primer 1*  \n",
-    "Na intervalu $[0,1]$ naj bo $T_1 = \\frac{x}{3}$ in $T_2 = \\frac{x}{3} + \\frac{2}{3}$. Potem je $\\{T_1, T_2\\}$ IFS za Kantorjevo množico.\n",
+    "Na intervalu $[0,1]$ naj bo $T_1 = x/3$ in $T_2 = x/3 + 2/3$. Potem je $\\{T_1, T_2\\}$ IFS za Kantorjevo množico.\n",
     "\n",
     "*Primer 2*  \n",
     "Na enotskem kvadratu definiramo: \n",
